# cloud-agent-slot

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-build.yml
docs/: ASSET_GUIDELINES.md  CHARACTER_GOSHIRAKAWA_PLAN.md  DEVELOPMENT_PLAN.md  DIRECTION_SPEC.md  HANDOVER.md  ROADMAP.md  SEEDANCE_GUIDELINES.md  SIMULATION_REPORT.md  SPEC.md  STEP1_VERIFICATION.md  STEP3_VERIFICATION.md  STEP5_VERIFICATION.md  UAT_BATTLE_PRODUCTION_PLAN.md  YOKOKU_PRODUCTION_PLAN.md
docs/handover/: 001_kickoff.md  002_web_exe_and_asset_policy.md  003_assets_reel_and_state_design.md  004_phase1_core_and_spec_draft.md  005_merge_chain_into_main.md  006_assets_and_phase2_reel.md  006_cabinet_intake_and_reel_control.md  006_excel_spec_intake_guide.md  007_assets_and_phase2_reel.md  008_pr7_pr8_conflict_resolution.md  009_excel_spec_intake_and_review.md  010_spec_answers_and_core_alignment.md  011_remaining_answers_and_push_guide.md  012_incoming_assets_import.md  012_step1_error_analysis.md  013_pr14_conflict_resolution.md  014_step1_error_reinvestigation.md  014_step1_split_plan.md  (+82 more)
incoming/: README.md
scripts/: fal_connection_test.mjs  gen_battle_images.mjs  gen_character_sheets.mjs  gen_goshirakawa_design.mjs  gen_goshirakawa_face.mjs  gen_placeholder_assets.py  gen_project_summary_pptx.py  gen_yokoku_kaiwa.mjs  gen_yokoku_koyu1.mjs  import_cabinet.py  import_incoming_assets.py  intake_cabinet.py  run_simulation.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+219 files in other folders)
